--- a/views/index.tt
+++ b/views/index.tt
@@ -1,4 +1,4 @@
-Welcome to Dancer 2 on OpenShift V3!  It is currently [% timestamp %]
+Welcome to the Mowntan Dancer 2 Application on OpenShift V3!  It is currently [% timestamp %]
 <br>
 <br>
 <form action="/" method="post">
